@@ -18,7 +18,6 @@
 
 package org.apache.zookeeper.server.quorum;
 
-import org.apache.zookeeper.common.HostNameUtils;
 
 /**
  * Implementation of the local peer MBean interface.
@@ -79,13 +78,13 @@ public class LocalPeerBean extends ServerBean implements LocalPeerMXBean {
     }
 
     public String getElectionAddress() {
-        return HostNameUtils.getHostString(peer.getElectionAddress()) + ":"
-                + peer.getElectionAddress().getPort();
+        return peer.getElectionAddress().getHostString() + ":" +
+            peer.getElectionAddress().getPort();
     }
 
     public String getClientAddress() {
-        return HostNameUtils.getHostString(peer.getClientAddress()) + ":"
-                + peer.getClientAddress().getPort();
+        return peer.getClientAddress().getHostString() + ":" +
+            peer.getClientAddress().getPort();
     }
 
     public String getLearnerType(){
